# ticket-purchase

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  大麦抢票流程.drawio
damai/: __init__.py  concert.py  config.json  config.py  damai.py  requirements.txt
damai_appium/: __init__.py  app.md  config.json  config.jsonc  config.py  damai_app.py  damai_app_v2.py
tests/: conftest.py  test_setup_validation.py
